--- a/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
@@ -67,17 +67,17 @@ target_link_libraries(jaka_control_node
 )
 
 # Bridge node for teleoperation (subscribes to /left_arm/joint_command, /right_arm/joint_command)
-add_executable(jaka_bridge_node src/jaka_bridge_node.cpp)
-ament_target_dependencies(jaka_bridge_node
-  rclcpp
-  std_srvs
-  sensor_msgs
-)
-target_link_libraries(jaka_bridge_node
-  jaka_interface
-  smooth_servo_bridge
-  ${JAKA_API_LIB}
-)
+# add_executable(jaka_bridge_node src/jaka_bridge_node.cpp)
+# ament_target_dependencies(jaka_bridge_node
+#   rclcpp
+#   std_srvs
+#   sensor_msgs
+# )
+# target_link_libraries(jaka_bridge_node
+#   jaka_interface
+#   smooth_servo_bridge
+#   ${JAKA_API_LIB}
+# )
 
 install(TARGETS jaka_interface smooth_servo_bridge
   ARCHIVE DESTINATION lib
@@ -87,7 +87,7 @@ install(TARGETS jaka_interface smooth_servo_bridge
 
 install(TARGETS
   jaka_control_node
-  jaka_bridge_node
+  # jaka_bridge_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
