feat: 添加深度图可视化节点及其启动脚本支持

--- a/qyh_jushen_ws/src/OrbbecSDK_ROS2/orbbec_camera/CMakeLists.txt
+++ b/qyh_jushen_ws/src/OrbbecSDK_ROS2/orbbec_camera/CMakeLists.txt
@@ -196,6 +196,7 @@ install(
   PROGRAMS
     scripts/common_benchmark_node.py
     scripts/service_benchmark_node.py
+    scripts/depth_visualizer.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
