feat: add ComputeIK service and implement inverse kinematics handling

--- a/qyh_jushen_ws/src/qyh_jaka_control_msgs/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control_msgs/CMakeLists.txt
@@ -33,6 +33,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/JogStop.srv"
   "srv/SetPayload.srv"
   "srv/GetPayload.srv"
+  "srv/ComputeIK.srv"
   DEPENDENCIES std_msgs geometry_msgs
 )
 
