--- a/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(std_srvs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(qyh_jaka_control_msgs REQUIRED)
 
@@ -57,6 +58,7 @@ ament_target_dependencies(jaka_control_node
   sensor_msgs
   geometry_msgs
   tf2
+  tf2_ros
   tf2_geometry_msgs
   qyh_jaka_control_msgs
 )
