--- a/qyh_jushen_ws/src/qyh_jaka_control/package.xml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/package.xml
@@ -14,6 +14,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf2</build_depend>
+  <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>qyh_jaka_control_msgs</build_depend>
 
@@ -23,6 +24,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>qyh_jaka_control_msgs</exec_depend>
 
