refactor: standardize directory and file names to lowercase for dual arms URDF and related scripts

--- a/qyh_jushen_ws/src/dual_arms/config/robot_calibration_poses.yaml
+++ b/qyh_jushen_ws/src/dual_arms/config/robot_calibration_poses.yaml
@@ -101,3 +101,13 @@ calibration_info:
 #       position: {x: 0.0, y: 0.0, z: 0.0}
 #     right_arm:
 #       position: {x: 0.0, y: 0.0, z: 0.0}
+
+
+# 原点【所有关节角度均为0度时】末端执行器位置（仅供参考）
+# urdf计算出来的结果： 左手 xyz = [0.0004,   0.9905,   0.2170]  左手rpy = [90.00°,     0.00°,   180.00°]
+# 真实的机械臂的结果:  左手 xyz = [0.0000,   0.9927,   0.2200]  左手rpy = [90.00°,     0.00°,   180.00°]
+# 偏差的机械臂的结果:             [-0.0004,  0.0022,  0.0030]
+
+# urdf计算出来的结果： 右手 xyz = [ 0.000400,  -0.990500,   0.217000]  右手rpy = [90.24°,     0.00°,     0.00°]
+# 真实的机械臂的结果:  右手 xyz = [-0.000680,  -0.989450,   0.217951]  右手rpy = [90.00°,     0.00°,   180.00°]
+# 偏差的机械臂的结果:             [-0.001080,  0.001050,   0.000951]  
