--- a/qyh_jushen_ws/src/qyh_dual_arms_description/package.xml
+++ b/qyh_jushen_ws/src/qyh_dual_arms_description/package.xml
@@ -3,20 +3,22 @@
 <package format="3">
   <name>qyh_dual_arms_description</name>
   <version>1.0.0</version>
-  <description>URDF description for QYH dual JAKA Zu7 robotic arms with custom mounting configuration</description>
-  <maintainer email="jsqinyinghao@live.com">qyh</maintainer>
-  <license>Apache-2.0</license>
+  <description>
+    URDF Description package for qyh_dual_arms_description.
+    This package contains configuration data, 3D models and launch files
+    for qyh_dual_arms_description robot.
+  </description>
+  <author>TODO</author>
+  <maintainer email="TODO@email.com">TODO</maintainer>
+  <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>xacro</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>joint_state_publisher</exec_depend>
-  <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>rviz2</exec_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>xacro</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
