Add error codes and type definitions for JAKA robot API
- Created jkerr.h to define various error codes for the JAKA robot API, including success and failure states.
- Introduced jktypes.h to define data structures and types used in the JAKA robot API, including Cartesian coordinates, joint values, and system monitoring data.
- Added the binary library libjakaAPI_2_3_0_13.so for the JAKA robot API.

--- a/qyh_jushen_ws/src/qyh_dual_arm_teleop/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_dual_arm_teleop/CMakeLists.txt
@@ -59,10 +59,10 @@ install(DIRECTORY config
   DESTINATION share/${PROJECT_NAME}
 )
 
-# Install header files
-install(DIRECTORY include/
-  DESTINATION include
-)
+# # Install header files
+# install(DIRECTORY include/
+#   DESTINATION include
+# )
 
 # Testing disabled to avoid catkin_pkg dependency
 # if(BUILD_TESTING)
