--- a/qyh_jushen_ws/src/qyh_dual_arm_ik_solver/package.xml
+++ b/qyh_jushen_ws/src/qyh_dual_arm_ik_solver/package.xml
@@ -16,6 +16,7 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>qyh_jaka_control_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
