Implement JakaServiceHandlers for robot control and remove SmoothServoBridge
- Added JakaServiceHandlers class to manage robot power, enable/disable states, error handling, and motion commands.
- Implemented service handlers for power on/off, enable/disable, clear error, motion abort, and servo control.
- Removed SmoothServoBridge class to streamline servo control logic.
- Introduced VelocityServoController for velocity-based control with KDL for kinematics.
- Added parameter loading for velocity control gains and limits.
- Implemented command computation with damping for joint velocities.

--- a/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
@@ -18,11 +18,15 @@ find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(qyh_jaka_control_msgs REQUIRED)
+find_package(orocos_kdl REQUIRED)
+find_package(kdl_parser REQUIRED)
+find_package(urdf REQUIRED)
 
 # Include directories
 include_directories(
   include
   ./thirdparty/include
+  ${orocos_kdl_INCLUDE_DIRS}
 )
 
 # Resolve JAKA API shared library (Jetson ARM64 version)
@@ -47,15 +51,24 @@ target_link_libraries(jaka_interface
   ${JAKA_API_LIB}
 )
 
-add_library(smooth_servo_bridge src/smooth_servo_bridge.cpp)
-ament_target_dependencies(smooth_servo_bridge
+add_library(velocity_servo_controller src/velocity_servo_controller.cpp)
+ament_target_dependencies(velocity_servo_controller
   rclcpp
+  geometry_msgs
+  sensor_msgs
+  orocos_kdl
+  kdl_parser
+  urdf
 )
-target_link_libraries(smooth_servo_bridge
+target_link_libraries(velocity_servo_controller
+  ${orocos_kdl_LIBRARIES}
 )
 
 # Main control node (unified: basic + servo + VR)
-add_executable(jaka_control_node src/jaka_control_node.cpp)
+add_executable(jaka_control_node 
+  src/jaka_control_node.cpp
+  src/jaka_service_handlers.cpp
+)
 ament_target_dependencies(jaka_control_node
   rclcpp
   std_srvs
@@ -65,11 +78,15 @@ ament_target_dependencies(jaka_control_node
   tf2_ros
   tf2_geometry_msgs
   qyh_jaka_control_msgs
+  orocos_kdl
+  kdl_parser
+  urdf
 )
 target_link_libraries(jaka_control_node
   jaka_interface
-  smooth_servo_bridge
+  velocity_servo_controller
   ${JAKA_API_LIB}
+  ${orocos_kdl_LIBRARIES}
 )
 
 # Bridge node for teleoperation (subscribes to /left_arm/joint_command, /right_arm/joint_command)
@@ -80,12 +97,12 @@ target_link_libraries(jaka_control_node
 #   sensor_msgs
 # )
 # target_link_libraries(jaka_bridge_node
-#   jaka_interface
+#   jaka_interface velocity_servo_controller
 #   smooth_servo_bridge
 #   ${JAKA_API_LIB}
 # )
 
-install(TARGETS jaka_interface smooth_servo_bridge
+install(TARGETS jaka_interface velocity_servo_controller
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
