--- a/qyh_jushen_ws/src/qyh_jaka_control/package.xml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/package.xml
@@ -17,6 +17,7 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>qyh_jaka_control_msgs</build_depend>
+  <build_depend>ament_index_cpp</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_srvs</exec_depend>
@@ -27,6 +28,7 @@
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>qyh_jaka_control_msgs</exec_depend>
+  <exec_depend>ament_index_cpp</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
