feat: Refactor VelocityServoController to integrate IK solver and enhance joint control parameters

--- a/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
@@ -86,7 +86,8 @@
       
       # 安全参数
       q_dot_min: 0.0001  # 微小速度死区 (rad/s), 防止抖动漂移
-      max_delta_q: 0.02  # 最大单步积分量 (rad), 防止大跳变
+      max_delta_q: 0.005  # 最大单步积分量 (rad), 对应0.625 rad/s @ 125Hz (从0.02降低)
+      max_joint_accel: 50.0  # 最大关节加速度 (rad/s²), 防止速度突变
       lambda_min: 0.0001  # 雅可比伪逆阻尼系数下限
       
       # 末端死区（到达目标附近时停止运动）
