--- a/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
@@ -84,11 +84,11 @@
       max_angular_vel: 1.0  # 最大角速度 (rad/s)
       
       # 关节速度限制
-      joint_vel_limit: 1.5  # 关节速度限制 (rad/s)
+      joint_vel_limit: 3.0  # 关节速度限制 (rad/s) (Increased from 1.5 to allow faster VR moves)
       
       # 安全参数
       q_dot_min: 0.0001  # 微小速度死区 (rad/s), 防止抖动漂移
-      max_delta_q: 0.005  # 最大单步积分量 (rad), 对应0.625 rad/s @ 125Hz (从0.02降低)
+      max_delta_q: 0.015  # 最大单步积分量 (rad), 对应1.875 rad/s @ 125Hz (从0.005提高以减少Servo Clamp)
       max_joint_accel: 50.0  # 最大关节加速度 (rad/s²), 防止速度突变
       lambda_min: 0.0001  # 雅可比伪逆阻尼系数下限
       
