--- a/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
@@ -87,8 +87,8 @@
       joint_vel_limit: 3.0  # 关节速度限制 (rad/s) (Increased from 1.5 to allow faster VR moves)
       
       # 安全参数
-      q_dot_min: 0.0001  # 微小速度死区 (rad/s), 防止抖动漂移
-      max_delta_q: 0.015  # 最大单步积分量 (rad), 对应1.875 rad/s @ 125Hz (从0.005提高以减少Servo Clamp)
+      q_dot_min: 0.003  # 微小速度死区 (rad/s), 增大以减少微抖
+      max_delta_q: 0.03  # 最大单步积分量 (rad), 放宽以减少Servo Clamp（配合加速度限制仍保持平滑）
       max_joint_accel: 50.0  # 最大关节加速度 (rad/s²), 防止速度突变
       lambda_min: 0.0001  # 雅可比伪逆阻尼系数下限
       
