--- a/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
@@ -74,31 +74,19 @@
     # 速度积分控制参数 (Velocity Servo Controller)
     velocity_control:
       # 控制周期与增益
-      dt: 0.008  # 控制周期 (s), 对应125Hz
-      target_update_dt: 0.066  # 目标更新周期 (s), 对应15Hz
-      linear_gain: 2.0  # 位置误差增益
-      angular_gain: 1.0  # 姿态误差增益
-      
-      # 末端速度限制
-      max_linear_vel: 0.5  # 最大线速度 (m/s)
-      max_angular_vel: 1.0  # 最大角速度 (rad/s)
       
       # 关节速度限制
       joint_vel_limit: 3.0  # 关节速度限制 (rad/s) (Increased from 1.5 to allow faster VR moves)
       
       # 安全参数
-      q_dot_min: 0.003  # 微小速度死区 (rad/s), 增大以减少微抖
-      max_delta_q: 0.03  # 最大单步积分量 (rad), 放宽以减少Servo Clamp（配合加速度限制仍保持平滑）
       max_joint_accel: 50.0  # 最大关节加速度 (rad/s²), 防止速度突变
-      lambda_min: 0.0001  # 雅可比伪逆阻尼系数下限
-      
-      # 末端死区（到达目标附近时停止运动）
-      position_deadzone: 0.001  # 位置死区 (m)
-      orientation_deadzone: 0.017  # 姿态死区 (rad), 约1度
       
       # 目标变化死区（过滤VR手柄的微小抖动，避免不必要的指令更新）
       target_change_position_threshold: 0.002  # 位置变化阈值 (m), 约2mm
       target_change_orientation_threshold: 0.035  # 姿态变化阈值 (四元数距离), 约2度
+
+      # IK关节解低通（在IK Gate 通过后对关节目标做指数平滑，抑制“来回抖”）
+      joint_target_alpha: 0.6
       
       # 关节限位（自动从URDF读取，这里作为备份）
       joint_pos_min: [-6.2832, -1.8326, -6.2832, -2.5307, -6.2832, -1.8326, -6.2832]  # rad
