--- a/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+find_package(tf2_eigen REQUIRED)
 find_package(ament_index_cpp REQUIRED)
 find_package(qyh_jaka_control_msgs REQUIRED)
 find_package(orocos_kdl REQUIRED)
@@ -54,6 +55,7 @@ ament_target_dependencies(jaka_control_node
   tf2
   tf2_ros
   tf2_geometry_msgs
+  tf2_eigen
   qyh_jaka_control_msgs
   ament_index_cpp
   orocos_kdl
