--- a/qyh_jushen_ws/src/qyh_dual_arm_teleop_python/config/left.yaml
+++ b/qyh_jushen_ws/src/qyh_dual_arm_teleop_python/config/left.yaml
@@ -1,3 +1,4 @@
-ros__parameters:
-  arm_side: left
-  arm_in_base_link_transform: [-0.0004, 0.08522, 0.0030, 0.0, 0.0, -0.5236]
+qyh_teleop_left:
+  ros__parameters:
+    arm_side: left
+    arm_in_base_link_transform: [-0.0004, 0.08522, 0.0030, 0.0, 0.0, -0.5236]
