--- a/qyh_jushen_ws/src/qyh_dual_arm_teleop_python/config/right.yaml
+++ b/qyh_jushen_ws/src/qyh_dual_arm_teleop_python/config/right.yaml
@@ -1,3 +1,4 @@
-ros__parameters:
-  arm_side: right
-  arm_in_base_link_transform: [-0.00108, -0.08395, 0.000951, 0.0, 0.0, 0.5236]
+qyh_teleop_right:
+  ros__parameters:
+    arm_side: right
+    arm_in_base_link_transform: [-0.00108, -0.08395, 0.000951, 0.0, 0.0, 0.5236]
