--- a/qyh_jushen_ws/src/qyh_dual_arm_teleop_python/package.xml
+++ b/qyh_jushen_ws/src/qyh_dual_arm_teleop_python/package.xml
@@ -12,11 +12,13 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-
+  <build_depend>qyh_waist_msgs</build_depend>
+  
   <exec_depend>rclpy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>qyh_waist_msgs</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
