--- a/src/qyh_shutdown/CMakeLists.txt
+++ b/src/qyh_shutdown/CMakeLists.txt
@@ -11,6 +11,17 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 
+# Detect architecture
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64|ARM64")
+  set(ARCH_DIR "arm64")
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
+  set(ARCH_DIR "x64")
+else()
+  set(ARCH_DIR "arm64")  # Default to arm64 for Jetson
+endif()
+
+message(STATUS "Detected architecture: ${CMAKE_SYSTEM_PROCESSOR}, using ${ARCH_DIR}")
+
 # Include directories
 include_directories(
   thirdparty/include
@@ -18,7 +29,7 @@ include_directories(
 
 # Link directories
 link_directories(
-  thirdparty/lib/linux
+  ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/lib/linux/${ARCH_DIR}
 )
 
 # Lift control node
@@ -48,10 +59,12 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}
 )
 
-
-install(DIRECTORY thirdparty/lib/linux/
+# Install the correct architecture libraries
+install(DIRECTORY thirdparty/lib/linux/${ARCH_DIR}/
   DESTINATION lib
   FILES_MATCHING PATTERN "*.so*"
+  PATTERN "*.so" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+  PATTERN "*.so.*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
 if(BUILD_TESTING)
