Add error codes and type definitions for robotic control
- Introduced `jkerr.h` with various error codes for handling robot control errors, including communication errors, parameter validation, and operational states.
- Added `jktypes.h` containing type definitions for robot control, including structures for Cartesian coordinates, joint values, system monitoring data, and robot state.
- Defined enums for program states, coordinate types, and movement modes to enhance code readability and maintainability.

--- a/src/qyh_jaka_control/CMakeLists.txt
+++ b/src/qyh_jaka_control/CMakeLists.txt
@@ -26,17 +26,40 @@ find_package(urdf REQUIRED)
 find_package(trac_ik_lib REQUIRED)
 find_package(yaml-cpp REQUIRED)
 
+# Detect system architecture
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64|ARM64")
+  set(JAKA_ARCH "arm64")
+  message(STATUS "🔧 Detected ARM64 architecture")
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64|amd64")
+  set(JAKA_ARCH "x64")
+  message(STATUS "🔧 Detected x64 architecture")
+else()
+  message(WARNING "⚠️ Unknown architecture: ${CMAKE_SYSTEM_PROCESSOR}, defaulting to arm64")
+  set(JAKA_ARCH "arm64")
+endif()
+
+# Set architecture-specific paths
+set(JAKA_THIRDPARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/${JAKA_ARCH}")
+set(JAKA_INCLUDE_DIR "${JAKA_THIRDPARTY_DIR}/include")
+set(JAKA_LIB_DIR "${JAKA_THIRDPARTY_DIR}/lib")
+
+message(STATUS "📁 JAKA Include directory: ${JAKA_INCLUDE_DIR}")
+message(STATUS "📁 JAKA Library directory: ${JAKA_LIB_DIR}")
+
 # Include directories
 include_directories(
-  ./thirdparty/include
+  ${JAKA_INCLUDE_DIR}
   ${orocos_kdl_INCLUDE_DIRS}
 )
 
-# Resolve JAKA API shared library (Jetson ARM64 version)
-set(JAKA_API_LIB "${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/lib/libjakaAPI_2_3_0_13.so")
-if(NOT EXISTS ${JAKA_API_LIB})
-  message(FATAL_ERROR "JAKA API shared library not found at ${JAKA_API_LIB}. Please verify thirdparty/lib contents.")
+# Find JAKA API shared library
+file(GLOB JAKA_API_LIBS "${JAKA_LIB_DIR}/libjakaAPI*.so")
+if(NOT JAKA_API_LIBS)
+  message(FATAL_ERROR "❌ JAKA API shared library not found in ${JAKA_LIB_DIR}. Please verify thirdparty/${JAKA_ARCH}/lib contents.")
 endif()
+list(GET JAKA_API_LIBS 0 JAKA_API_LIB)
+get_filename_component(JAKA_API_LIB_NAME ${JAKA_API_LIB} NAME)
+message(STATUS "✅ Found JAKA API library: ${JAKA_API_LIB_NAME}")
 
 # Set RPATH so the executable can find the shared library at runtime
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/thirdparty")
@@ -83,12 +106,6 @@ install(DIRECTORY
 install(DIRECTORY
   launch/
   DESTINATION share/${PROJECT_NAME}/launch
-)
-
-# Install Python scripts (including joint adapter)
-install(PROGRAMS
-  scripts/qyh_jaka_joint_adapter_node.py
-  DESTINATION lib/${PROJECT_NAME}
 )
 
 # Install JAKA API shared library
