yczn@yczn-desktop:~/qyh-robot-system$ ls -l /dev/ttyACM_steering_gear /dev/ttyUSB_gripper lrwxrwxrwx 1 root root 7 Jan  9 11:03 /dev/ttyACM_steering_gear -> ttyACM0 lrwxrwxrwx 1 root root 7 Jan  9 11:03 /dev/ttyUSB_gripper -> ttyUSB0

--- a/src/qyh_head_motor_control/config/head_motor_params.yaml
+++ b/src/qyh_head_motor_control/config/head_motor_params.yaml
@@ -5,7 +5,7 @@ head_motor_node:
   ros__parameters:
     # Serial port configuration
     # 串口配置
-    serial_port: "/dev/ttyACM0"
+    serial_port: "/dev/ttyACM_steering_gear"
     baudrate: 1000000
     
     # Motor configuration
