--- a/src/qyh_gripper_control/config/gripper.yaml
+++ b/src/qyh_gripper_control/config/gripper.yaml
@@ -1,6 +1,6 @@
 /**:
   ros__parameters:
-    device_port: "/dev/ttyUSB0"
+    device_port: "/dev/ttyUSB_gripper"
     baudrate: 115200
     slave_id: 1
     publish_rate: 20.0
