--- a/src/qyh_shutdown/config/shutdown_params.yaml
+++ b/src/qyh_shutdown/config/shutdown_params.yaml
@@ -1,5 +1,5 @@
-# 升降电机控制参数
-lift_control_node:
+# 关机控制参数
+qyh_shutdown_node:
   ros__parameters:
     # PLC 连接参数
     plc_ip: "192.168.1.88"
@@ -7,3 +7,7 @@ lift_control_node:
 
     # 状态发布频率 (Hz)
     publish_rate: 10.0
+    
+    # Modbus地址配置
+    # 关机信号为M100 (Coil地址100)
+    shutdown_coil_address: 100
