--- a/src/qyh_gripper_control/config/gripper.yaml
+++ b/src/qyh_gripper_control/config/gripper.yaml
@@ -7,3 +7,11 @@
     auto_activate: true
     left_slave_id: 2
     right_slave_id: 1
+    led_enabled: true
+    led_slave_id: 3
+    led_topic: "/robot_led/set_color"
+    # 默认LED颜色 (0-255), W是白色通道用于产生更纯净的白光
+    led_default_r: 0
+    led_default_g: 255
+    led_default_b: 0
+    led_default_w: 0
